# codetool-lab-opus4.8

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  merge-on-green.yml  release.yml
control/: inbox.md  status.md
docs/: DECISIONS.md  _merge_verification_2026-07-15.md
docs/audits/: 2026-07-13-fleet-cleanup-audit.md
docs/retro/: QUESTIONS.md  project-review-2026-07-09.md  project-review-final-2026-07-09.md  self-review-2026-07-09.md
docs/succession/: ENVIRONMENT.md  GEN2-FEEDBACK.md  NEXT-BOOT.md  PROPOSED-CUSTOM-INSTRUCTIONS.md
environments/: setup.sh
examples/: tutorial.md
src/mdverify/: __init__.py  __main__.py  block.py  cli.py  config.py  console.py  errors.py  parser.py  report.py  runner.py
tests/: conftest.py  test_adoption_tooling.py  test_block.py  test_cli.py  test_config.py  test_console_assertions.py  test_parser.py  test_pyproject_config.py  test_report.py  test_runner.py  test_sessions.py  test_version.py
tests/fixtures/: console_fail.md  console_pass.md  directives.md  expect_error.md  failing.md  output_match.md  output_mismatch.md  passing.md  session_fail.md  session_pass.md  unknown_lang.md
